--- a/public/stylesheets/addAlbum.css
+++ b/public/stylesheets/addAlbum.css
@@ -12,4 +12,25 @@ body {
   position: relative;
   overflow-y: auto; }
 
+.padding-8 {
+  padding: 16px 8px;
+  height: 200px; }
+
+.width {
+  width: 100px; }
+
+.blue-color {
+  background: #007bff; }
+
+.text-padding {
+  padding: 6px 12px; }
+
+.text-margin {
+  margin-right: 8px; }
+
+.text-size {
+  font-size: 16px; }
+
+/*# sourceMappingURL=addAlbum.css.map */
+
 /*# sourceMappingURL=addAlbum.css.map */
