--- a/public/stylesheets/addAlbum.css
+++ b/public/stylesheets/addAlbum.css
@@ -6,6 +6,15 @@ body {
   width: 100vw;
   height: 100vh; }
 
+.display-none {
+  display: none; }
+
+.display-block {
+  display: block; }
+
+.main-content {
+  min-height: 400px; }
+
 .content {
   width: 100%;
   height: 100%;
@@ -31,6 +40,55 @@ body {
 .text-size {
   font-size: 16px; }
 
-/*# sourceMappingURL=addAlbum.css.map */
+.search-bar {
+  width: 350px;
+  height: 35px;
+  display: flex;
+  position: relative; }
+.search-bar i.fa.fa-search {
+  position: absolute;
+  right: 10px;
+  width: 30px;
+  height: 30px;
+  font-size: 20px;
+  margin: 0 10px;
+  color: #cccccc;
+  line-height: 35px;
+  cursor: pointer; }
+.search-bar input {
+  width: 400px;
+  height: 35px;
+  font-size: 16px;
+  line-height: 35px;
+  color: #333;
+  padding: 0 0 0 30px;
+  border: 1px solid #cccccc;
+  border-radius: 5px; }
+
+.tag-content {
+  display: flex;
+  flex-wrap: wrap;
+  padding-bottom: 8px; }
+.tag-content .tag {
+  display: inline;
+  margin-right: 16px;
+  height: 20px;
+  color: #1b9de2;
+  cursor: pointer; }
+.tag-content .tag:hover {
+  color: #1F6EE2; }
+
+.card-text {
+  font-size: 18px;
+  font-weight: 600; }
+
+.back-img {
+  background-image: url("https://preview.ibb.co/g5Gy9J/2018_07_22_7_03_06.png");
+  background-repeat: no-repeat;
+  background-clip: padding-box;
+  background-size: cover; }
+
+.height-auto {
+  height: auto !important; }
 
 /*# sourceMappingURL=addAlbum.css.map */
