--- a/public/stylesheets/addAlbum.css
+++ b/public/stylesheets/addAlbum.css
@@ -22,8 +22,7 @@ body {
   overflow-y: auto; }
 
 .padding-8 {
-  padding: 16px 8px;
-  height: 200px; }
+  padding: 16px 8px; }
 
 .width {
   width: 100px; }
@@ -45,38 +44,38 @@ body {
   height: 35px;
   display: flex;
   position: relative; }
-.search-bar i.fa.fa-search {
-  position: absolute;
-  right: 10px;
-  width: 30px;
-  height: 30px;
-  font-size: 20px;
-  margin: 0 10px;
-  color: #cccccc;
-  line-height: 35px;
-  cursor: pointer; }
-.search-bar input {
-  width: 400px;
-  height: 35px;
-  font-size: 16px;
-  line-height: 35px;
-  color: #333;
-  padding: 0 0 0 30px;
-  border: 1px solid #cccccc;
-  border-radius: 5px; }
+  .search-bar i.fa.fa-search {
+    position: absolute;
+    right: 10px;
+    width: 30px;
+    height: 30px;
+    font-size: 20px;
+    margin: 0 10px;
+    color: #cccccc;
+    line-height: 35px;
+    cursor: pointer; }
+  .search-bar input {
+    width: 400px;
+    height: 35px;
+    font-size: 16px;
+    line-height: 35px;
+    color: #333;
+    padding: 0 0 0 30px;
+    border: 1px solid #cccccc;
+    border-radius: 5px; }
 
 .tag-content {
   display: flex;
   flex-wrap: wrap;
   padding-bottom: 8px; }
-.tag-content .tag {
-  display: inline;
-  margin-right: 16px;
-  height: 20px;
-  color: #1b9de2;
-  cursor: pointer; }
-.tag-content .tag:hover {
-  color: #1F6EE2; }
+  .tag-content .tag {
+    display: inline;
+    margin-right: 16px;
+    height: 20px;
+    color: #1b9de2;
+    cursor: pointer; }
+    .tag-content .tag:hover {
+      color: #1F6EE2; }
 
 .card-text {
   font-size: 18px;
@@ -90,5 +89,16 @@ body {
 
 .height-auto {
   height: auto !important; }
+
+.grid {
+  height: auto !important;
+  width: 100%; }
+
+.cell {
+  display: inline-block;
+  vertical-align: top; }
+
+.view {
+  break-inside: avoid; }
 
 /*# sourceMappingURL=addAlbum.css.map */
